@@ -16,3 +16,4 @@
 15|MULTIPOINT(0 0,1 1,2 2)
 16|MULTIPOINT(0 0,1 1,2 2)
 17|MULTIPOINT(0 0,4 4)
+19|POLYGON((0 0,10 0,10 10,0 10,0 0))|BOX(0 0,10 10)
